added league endpoints
